chore: initialize development environment with .1024 configuration and .gitignore setup

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,33 @@ cython_debug/
 core.*
 .breakpoints
 .env
+# System and Version Control Files
+.DS_Store
+Thumbs.db
+.nfs*
+# Dependencies and Build Artifacts
+node_modules/
+.pnpm-store/
+dist/
+env/
+venv/
+vendor/
+cython_debug/
+# Logs, Temporary, and Backup Files
+*.log
+*.tmp
+*.bak
+*.old
+*.pid
+*.seed
+*.pid.lock
+# Environment and Configuration Files
+.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+coverage/
 
 # General
 .DS_Store
@@ -59,6 +86,18 @@ Thumbs.db
 *.pid
 *.seed
 *.pid.lock
+# Logs, Temporary, and Backup Files
+*.log
+*.tmp
+*.bak
+*.old
+*.pid.lock
+# Environment and Configuration Files
+.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
 
 # JavaScript/TypeScript
 .pnpm-store/
@@ -103,6 +142,12 @@ vendor/
 *.old
 *.swp
 *.swo
+# Environment and Configuration Files
+.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
 
 # Others
 *.env.local
